--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.14.1",
+    "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "~6.0.1",
     "@react-navigation/native-stack": "^6.0.2",
     "@react-navigation/stack": "~6.0.1",
+    "@types/styled-components": "^5.1.25",
     "apisauce": "2.0.0",
     "expo": "~44.0.6",
     "expo-linear-gradient": "^11.0.3",
@@ -50,6 +52,7 @@
     "reactotron-mst": "3.1.4",
     "reactotron-react-js": "^3.3.7",
     "reactotron-react-native": "5.0.1",
+    "styled-components": "^5.3.5",
     "validate.js": "0.13.1"
   },
   "devDependencies": {
