--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "react-native": "0.67.2",
     "react-native-gesture-handler": "1.10.3",
     "react-native-keychain": "6.2.0",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "3.1.8",
     "react-native-screens": "3.8.0",
     "reactotron-mst": "3.1.4",
