--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@react-navigation/stack": "~6.0.1",
     "@types/styled-components": "^5.1.25",
     "apisauce": "2.0.0",
+    "axios": "^0.26.1",
     "expo": "~44.0.6",
     "expo-linear-gradient": "^11.0.3",
     "expo-localization": "12.0.1",
@@ -51,6 +52,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "3.1.8",
     "react-native-screens": "3.8.0",
+    "react-native-toast-message": "^2.1.5",
     "reactotron-mst": "3.1.4",
     "reactotron-react-js": "^3.3.7",
     "reactotron-react-native": "5.0.1",
