--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "mobx-react-lite": "3.2.0",
     "mobx-state-tree": "5.0.1",
     "react": "17.0.2",
+    "react-hook-form": "^7.6.3",
     "react-native": "0.67.2",
     "react-native-gesture-handler": "1.10.3",
     "react-native-keychain": "6.2.0",
