--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native": "0.67.2",
     "react-native-gesture-handler": "1.10.3",
     "react-native-keychain": "6.2.0",
+    "react-native-modal": "^13.0.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "3.1.8",
