--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "mobx": "6.1.8",
     "mobx-react-lite": "3.2.0",
     "mobx-state-tree": "5.0.1",
+    "ramda": "^0.28.0",
     "react": "17.0.2",
     "react-hook-form": "^7.6.3",
     "react-native": "0.67.2",
