-Create IOS splashscreen

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "3.1.8",
     "react-native-screens": "3.8.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-toast-message": "^2.1.5",
     "reactotron-mst": "3.1.4",
     "reactotron-react-js": "^3.3.7",
